2007-09-25  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.94 ==

2007-09-25  Andy Wingo  <wingo@pobox.com>

	* NEWS: Updated.

2007-09-07  Andy Wingo  <wingo@pobox.com>

	* doc/Makefile.am: 
	* doc/guile-gnome-atk.texi:
	* doc/overview.texi:
	* doc/overrides.texi:
	* doc/section-*.texi:
	* doc/defuns-*.texi: Add infrastructure for documentation.
	
2007-06-15  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.93 ==

	* gnome/Makefile.am (guilemodule_DATA): Fix the conditional to be
	HAVE_ATK, and recurse into overrides.

2007-05-24  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.92 ==

2007-05-13  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/atk-spec.scm (initialize): Make it explicit that
	AtkState is a uint64.

	* package.ac: Add explicit check for atk >= 1.12; while this
	module technically works with any version, depending on the defs
	files, this is the version that the platform defs package has now.

2007-05-10  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.91 ==

2007-05-10  Andy Wingo  <wingo@pobox.com>

	* gnome/Makefile.am (DIST_SUBDIRS): Add overrides to dist.

2007-05-05  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/atk-spec.scm (initialize): 
	* gnome/overrides/Makefile.am: 
	* gnome/overrides/atk.defs: Add overrides for ATK, ignoring some
	functions.

2006-12-15  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.90 ==

2006-11-05  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/atk-spec.scm: Use (gnome gw support g-wrap), the
	g-wrap compatibility wrapper.

2005-03-06  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.7.99 ==

2005-01-11  Andy Wingo  <wingo@pobox.com>

	* == Released platform version 2.7.98 ==

2004-12-06  Andy Wingo  <wingo@pobox.com>

	* == Released platform version 2.7.97 ==

2004-11-15  Andy Wingo  <wingo@pobox.com>

	* package.ac: Add record_check.
