@@ -1,3 +1,3 @@
-SUBDIRS = gnome doc
+SUBDIRS = gnome doc tests
 
 EXTRA_DIST = ChangeLog NEWS AUTHORS README $(wildcard *.ac)
